--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
     </div>
   </main>
   <main class="container">
-    <div class="row">
-      <div class="column" id="game">
-        <form>
+    <div class="row" id="game">
+      <div class="column column-20">
           <button type="button" id="play-button" disabled>Play</button>
-        </form>
+      </div>
+      <div class="column">
+        <input type="range" id="speed" name="speed" title="Speed"
+        min="0" max="950" step="50">
+        <!-- <label for="speed" class="label-inline">Speed</label> -->
       </div>
     </div>
   </main>
