--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
   </main>
   <main class="container">
     <div class="row" id="game">
-      <div class="column column-20">
-          <button type="button" id="play-button" disabled>Play</button>
+      <div class="column column-25">
+        <button type="button" id="play-button" disabled>Play</button>
+        <button type="button" id="reset-button">Reset</button>
       </div>
       <div class="column">
         <input type="range" id="speed" name="speed" title="Speed"
-        min="0" max="950" step="50">
+          min="0" max="950" step="50">
         <!-- <label for="speed" class="label-inline">Speed</label> -->
       </div>
     </div>
