--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="column">
         <input type="range" id="speed" name="speed" title="Speed"
-          min="0" max="950" step="50">
+          min="0" max="950" step="50" value="750">
         <!-- <label for="speed" class="label-inline">Speed</label> -->
       </div>
     </div>
