Add file input for steps.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           </fieldset>
 
           <fieldset>
-            <label for="solution-text">Enter solution steps (optional)</label>
+            <label for="solution-text">Select or paste solution file (optional)</label>
+            <input type="file" id="steps-file">
             <textarea name="steps" id="steps-text" cols="30" rows="1"></textarea>
           </fieldset>
 
