--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
     </div>
   </main>
-  <main class="container">
-    <div class="row" id="game">
+  <main class="container" id="game">
+    <div class="row">
       <div class="column column-25">
         <button type="button" id="play-button" disabled>Play</button>
         <button type="button" id="reset-button" disabled>Reset</button>
@@ -53,6 +53,15 @@
         <input type="range" id="speed" name="speed" title="Speed"
           min="0" max="950" step="50" value="750">
         <!-- <label for="speed" class="label-inline">Speed</label> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <p id="steps">
+          <!-- <span class="done">wl</span>
+          <span>wl</span>
+          <span>wl</span> -->
+        </p>
       </div>
     </div>
   </main>
